src/objects/SNI_FL_Activity_History__c.object
<CustomObject>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ParentID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SNI FL Activity History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SNI FL Activity History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SNI FL Activity History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>